--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html{
   font-size: 12px;
 }
 body{
-  background: linear-gradient(#721140f0, #192355);
+  background: linear-gradient(to right, #561957, #192355, #561957);
   background-size: cover;
   color: #fdcbfe;
   font-family: Montserrat;
